마이페이지 이미지 업로드

--- a/front-end/src/components/Menu.module.css
+++ b/front-end/src/components/Menu.module.css
@@ -53,3 +53,16 @@
   margin-left: 2%;
   margin-right: 2%;
 }
+
+.inputFile {
+  display: none;
+}
+
+.uploadImg {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.uploadImg p img {
+  width: 90%;
+}
