--- a/front-end/src/components/Product.module.css
+++ b/front-end/src/components/Product.module.css
@@ -76,17 +76,29 @@
   clear: both;
 }
 
-.content_container select {
+/* .content_container select {
   color: black;
   width: 100px;
   height: 40px;
   text-align: center;
   margin-bottom: 20px;
-}
+} */
 
 .function_container {
   margin-top: 50px;
   padding-bottom: 80px;
+}
+
+.product_state {
+  color: black;
+  border-radius: 5px;
+  border: 1px solid gray;
+  padding: 5px 5px 5px 5px;
+  font-size: 17px;
+  text-align: center;
+  width: 100px;
+  height: 40px;
+  margin-bottom: 20px;
 }
 
 .product_title {
