navBar, 프로필 업데이트

--- a/front-end/src/components/NavBar.module.css
+++ b/front-end/src/components/NavBar.module.css
@@ -30,3 +30,13 @@
   font-weight: bold;
   margin-top: 20px;
 }
+
+ul {
+  list-style: none;
+  padding-left: 8px;
+
+}
+
+li {
+  padding-top: 16px;
+}
