NavBar Offcanvas onclick

--- a/front-end/src/components/NavBar.module.css
+++ b/front-end/src/components/NavBar.module.css
@@ -25,10 +25,14 @@
   width: 320px;
 }
 
-.title {
+.title, .mypage {
   color: black;
   font-weight: bold;
   margin-top: 20px;
+}
+
+.mypage {
+  margin-bottom: 30px;
 }
 
 ul {
